origami-engine/tests/trybuild/fail/should_fail_when_minify_html_is_enabled_and_is_used_in_non_script_or_style_tag.rs
use origami_engine::comp;

fn main() {
    comp! {
        foo =>
        div nominify {

        }
    }
    foo!();
}
