origami-engine/tests/trybuild/fail/should_fail_when_minify_html_is_enabled_and_is_used_in_non_script_or_style_tag.stderr
error: `nominify` can only be used with `script` or `style` tags
  --> tests/trybuild/fail/should_fail_when_minify_html_is_enabled_and_is_used_in_non_script_or_style_tag.rs:4:5
   |
4  | /     comp! {
5  | |         foo =>
6  | |         div nominify {
...  |
9  | |     }
   | |_____^
10 |       foo!();
   |       ------ in this macro invocation
   |
   = note: this error originates in the macro `foo` (in Nightly builds, run with -Z macro-backtrace for more info)
